Fix usage of removed methods in apiclient